BARC UAT/src/objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Warehouse</relationshipLabel>
        <relationshipName>Warehouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Billing_Address__c</fullName>
        <label>Warehouse Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warehouse_City__c</fullName>
        <label>Warehouse City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code__c</fullName>
        <displayFormat>WH-{0}</displayFormat>
        <label>Warehouse Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Warehouse_Country__c</fullName>
        <label>Warehouse Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse_Email__c</fullName>
        <label>Warehouse Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Warehouse_Phone__c</fullName>
        <label>Warehouse Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Warehouse_Pin_Code__c</fullName>
        <label>Warehouse Pin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Shipping_Address__c</fullName>
        <label>Warehouse Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warehouse_Shipping_City__c</fullName>
        <label>Warehouse Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Shipping_Country__c</fullName>
        <label>Warehouse Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse_Shipping_Pin_Code__c</fullName>
        <label>Warehouse Shipping Pin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Shipping_State__c</fullName>
        <label>Warehouse Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_State__c</fullName>
        <label>Warehouse State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>